k8s/deployment.yaml

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: hello-world
  spec:
    selector:
      matchLabels:
        app: hello-world
    replicas: 1
    template:
      metadata:
        labels:
          app: hello-world
      spec:
        containers:
        - name: hello-world
          image: okteto.dev/hello-world:latest
          ports:
          - containerPort: 8080
